--- a/src/index.html
+++ b/src/index.html
@@ -335,9 +335,27 @@
 
     <section id="contact">
       <div>
-        <h3>Contact</h3>
+        <h3>Get in Touch</h3>
+        <img src="../img/favicon.png" alt="A logo of YS">
         <h4>Yuko Suga</h4>
-        <p>info@webpoppins.com</p>
+        <div>
+          <a href="https://github.com/yukosuga" target="_blank"><img src="../img/github-circle.png" alt="Github icon" /></a>
+          <a href="https://www.linkedin.com/in/yuko-suga/" target="_blank"><img src="../img/linkedin-circle.png"
+              alt="LinkedIn icon" /></a>
+        </div>    
+
+        <form action="https://formspree.io/f/mknlrava" method="POST" class="contactForm">
+          <label>
+            <input type="text" name="name" placeholder="Your Name*" required />
+          </label>
+          <label>
+            <input type="email" name="email" placeholder="Your Email*" required>
+          </label>
+          <label>
+          <textarea name="message" placeholder="Your Message*" cols="30" rows="10" required></textarea>
+        </label>
+        <button type="submit">Send</button>
+        </form>
       </div>
     </section>
   </main>
