--- a/src/index.html
+++ b/src/index.html
@@ -62,12 +62,63 @@
     </div>
 
     <div class="headerTitle">
+      <h2>
+        <div class="contentTitle">
+          <span>W</span>
+          <div class="contentTitle-sub">
+            <p>e</p>
+            <p>b</p>
+            <p class="titleSpace1"></p>
+            <p>D</p>
+            <p>e</p>
+            <p>v</p>
+            <p>e</p>
+            <p>l</p>
+            <p>o</p>
+            <p>p</p>
+            <p>m</p>
+            <p>e</p>
+            <p>n</p>
+            <p>t</p>
+          </div>
+        </div>
+      </h2>
+      <p class="titleSpace2"></p>
+      <h2>
+        <div class="contentTitle">
+          <span>W</span>
+          <div class="contentTitle-sub">
+            <p>e</p>
+            <p>b</p>
+            <p class="titleSpace1"></p>
+            <p>D</p>
+            <p>e</p>
+            <p>s</p>
+            <p>i</p>
+            <p>g</p>
+            <p>n</p>
+          </div>
+        </div>
+      </h2>
+    </div>
+  </header>
+
+  <!-- <header class="headerDesktop">
+    <div class="headerNav">
+      <h1><span>Y</span>uko <span>S</span>uga</h1>
+      <nav>
+        <a href="#about">about</a>
+        <a href="#projects">projects</a>
+        <a href="#contact">contact</a>
+      </nav>
+    </div>
+
+    <div class="headerTitle">
       <h2><span>W</span>eb Development</h2>
       <p></p>
       <h2><span>W</span>eb Design</h2>
     </div>
-
-  </header>
+  </header> -->
 
   <main>
     <section id="about">
@@ -244,7 +295,7 @@
               <img src="../img/app2.png" alt="A website screenshot of Japanese Tandem Review">
             </div>
             <a href="https://yukosuga.github.io/japanese-tandem-review/" target="_blank">
-              <button type="button" class="button">Click to see correct or not</button>
+              <button type="button" class="button">Pick one answer</button>
             </a>
           </div>
 
@@ -258,7 +309,7 @@
               <img src="../img/app3.png" alt="A website screenshot of Genki-G Spotify">
             </div>
             <a href="https://yukosuga.github.io/genki-g-spotify/" target="_blank">
-              <button type="button" class="button">Choose a new topic</button>
+              <button type="button" class="button">Select a song</button>
             </a>
           </div>
 
@@ -272,7 +323,7 @@
               <img src="../img/app4.png" alt="A website screenshot of Password Generator">
             </div>
             <a href="https://yukosuga.github.io/password-generator/" target="_blank">
-              <button type="button" class="button">Click to see correct or not</button>
+              <button type="button" class="button">Create a password</button>
             </a>
           </div>
 
