Modified footer font size for small device

--- a/src/index.html
+++ b/src/index.html
@@ -214,7 +214,7 @@
             <img src="../img/project1.png" alt="A website screenshot of nailed it Salon by EMILIA">
             <a href="https://yukosuga.github.io/nailed-it-salon-by-emilia/" target="_blank">
               <button type="button" class="button">
-                nailed it Salon By EMILIA
+                Salon By EMILIA
               </button>
             </a>
           </div>
