--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,58 @@
 
 <body>
   <header class="headerMobile">
-    <div class="headerNav">
+        <div class="headerNav">
+      <h1><span>Y</span>uko <span>S</span>uga</h1>
+      <nav>
+        <a href="#about">about</a>
+        <a href="#projects">projects</a>
+        <a href="#contact">contact</a>
+      </nav>
+    </div>
+
+    <div class="headerTitle">
+      <h2>
+        <div class="contentTitle">
+          <span>W</span>
+          <div class="contentTitle-sub">
+            <p>e</p>
+            <p>b</p>
+            <p class="titleSpace1"></p>
+            <p>D</p>
+            <p>e</p>
+            <p>v</p>
+            <p>e</p>
+            <p>l</p>
+            <p>o</p>
+            <p>p</p>
+            <p>m</p>
+            <p>e</p>
+            <p>n</p>
+            <p>t</p>
+          </div>
+        </div>
+      </h2>
+      <p class="titleSpace2"></p>
+      <h2>
+        <div class="contentTitle">
+          <span>W</span>
+          <div class="contentTitle-sub">
+            <p>e</p>
+            <p>b</p>
+            <p class="titleSpace1"></p>
+            <p>D</p>
+            <p>e</p>
+            <p>s</p>
+            <p>i</p>
+            <p>g</p>
+            <p>n</p>
+          </div>
+        </div>
+      </h2>
+    </div>
+  </header>
+
+    <!-- <div class="headerNav">
       <h1><span>Y</span>uko <span>S</span>uga</h1>
       <nav>
         <a href="#about">about</a>
@@ -32,8 +83,7 @@
     <div class="headerTitle">
       <h2><span>W</span>eb Development</h2>
       <h2><span>W</span>eb Design</h2>
-    </div>
-  </header>
+    </div> -->
 
   <header class="headerTablet">
     <div class="headerNav">
@@ -46,10 +96,60 @@
     </div>
 
     <div class="headerTitle">
-      <h2><span>W</span>eb Development</h2>
-      <h2><span>W</span>eb Design</h2>
+      <h2>
+        <div class="contentTitle">
+          <span>W</span>
+          <div class="contentTitle-sub">
+            <p>e</p>
+            <p>b</p>
+            <p class="titleSpace1"></p>
+            <p>D</p>
+            <p>e</p>
+            <p>v</p>
+            <p>e</p>
+            <p>l</p>
+            <p>o</p>
+            <p>p</p>
+            <p>m</p>
+            <p>e</p>
+            <p>n</p>
+            <p>t</p>
+          </div>
+        </div>
+      </h2>
+      <p class="titleSpace2"></p>
+      <h2>
+        <div class="contentTitle">
+          <span>W</span>
+          <div class="contentTitle-sub">
+            <p>e</p>
+            <p>b</p>
+            <p class="titleSpace1"></p>
+            <p>D</p>
+            <p>e</p>
+            <p>s</p>
+            <p>i</p>
+            <p>g</p>
+            <p>n</p>
+          </div>
+        </div>
+      </h2>
     </div>
   </header>
+
+    <!-- <div class="headerNav">
+      <h1><span>Y</span>uko <span>S</span>uga</h1>
+      <nav>
+        <a href="#about">about</a>
+        <a href="#projects">projects</a>
+        <a href="#contact">contact</a>
+      </nav>
+    </div>
+
+    <div class="headerTitle">
+      <h2><span>W</span>eb Development</h2>
+      <h2><span>W</span>eb Design</h2>
+    </div> -->
 
   <header class="headerDesktop">
     <div class="headerNav">
