--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,18 @@
             alt="A profile photo Yuko holding Macbook"
           />
           <h3>Yuko Suga</h3>
-          <h4>Web Developer | Web Designer</h4>
+          <div class="profileTitle">
+            <div>
+              <h4>Web Developer</h4>
+              <h4>|</h4>
+              <h4>Web Designer</h4>
+            </div>
+            <div>
+              <p>ASc Fasion Design</p>
+              <p>-</p>
+              <p>BA Education</p>
+            </div>
+          </div>
         </div>
 
         <!-- Profile Text -->
