--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,28 @@
 
   <body>
     <header class="header">
-      <div class="headerNav">
+      <!-- <div class="headerNav">
         <h1><span>Y</span>uko <span>S</span>uga</h1>
         <nav>
           <a href="#about">about</a>
           <a href="#projects">projects</a>
           <a href="#contact">contact</a>
         </nav>
+      </div>
+ -->
+      <div class="headerNav">
+        <div class="headerSticky">
+          <div class="headerLogo">
+          <h1><span>Y</span>uko <span>S</span>uga</h1>
+        </div>
+        <div class="headerNav">
+          <nav>
+            <a href="#about">about</a>
+            <a href="#projects">projects</a>
+            <a href="#contact">contact</a>
+          </nav>
+        </div>
+        </div>
       </div>
 
       <div class="headerTitle">
@@ -178,7 +193,7 @@
       <section id="projects">
         <h3>Web Development</h3>
         <h4>mini projects at DCI</h4>
-        <div class="container-fruid contentProjects px-4">
+        <div class="container-fruid contentProjects pt-4 px-4">
           <div class="row gx-5">
             <!-- project1 -->
             <div class="col-lg-6">
@@ -258,7 +273,7 @@
       <section class="apps">
         <h3>Web Development</h3>
         <h4>mini Applications</h4>
-        <div class="container-fruid contentApps px-4">
+        <div class="container-fruid contentApps pt-4 px-4">
           <div class="row gx-5">
             <!-- app1 -->
             <div class="col-lg-6">
@@ -346,7 +361,7 @@
       <section class="hp">
         <h3>Web Design</h3>
         <h4>homepage</h4>
-        <div class="container-fruid contentHPs px-4">
+        <div class="container-fruid contentHPs pt-5 px-4">
           <div class="row gx-5">
             <div class="col-lg-4">
               <img
@@ -415,7 +430,7 @@
       <section class="lp">
         <h3>Web Design</h3>
         <h4>landing page</h4>
-        <div class="container-fruid contentHPs px-4">
+        <div class="container-fruid contentHPs pt-5 px-4">
           <div class="row gx-5">
             <div class="col-lg-4">
               <img
