Changed images png to jpg for making the site lighter

--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,7 @@
                 <p>HTML CSS</p>
               </div>
               <img
-                src="../img/project1.png"
+                src="../img/project1.jpg"
                 alt="A website screenshot of nailed it Salon by EMILIA"
               />
               <a
@@ -211,7 +211,7 @@
                 <p>HTML CSS</p>
               </div>
               <img
-                src="../img/project2.png"
+                src="../img/project2.jpg"
                 alt="A website screenshot of Cultural Diversity"
               />
               <a
@@ -229,7 +229,7 @@
                 <p>HTML CSS</p>
               </div>
               <img
-                src="../img/project3.png"
+                src="../img/project3.jpg"
                 alt="A website screenshot of Hotel Guest Registration Form"
               />
               <a
@@ -247,7 +247,7 @@
                 <p>HTML CSS</p>
               </div>
               <img
-                src="../img/project4.png"
+                src="../img/project4.jpg"
                 alt="A website screenshot of Nordic Style Home"
               />
               <a
@@ -274,7 +274,7 @@
               </div>
               <div class="appImage">
                 <img
-                  src="../img/app1.png"
+                  src="../img/app1.jpg"
                   alt="A website screenshot of German Conversation Practice"
                 />
               </div>
@@ -294,7 +294,7 @@
               </div>
               <div class="appImage">
                 <img
-                  src="../img/app2.png"
+                  src="../img/app2.jpg"
                   alt="A website screenshot of Japanese Tandem Review"
                 />
               </div>
@@ -314,7 +314,7 @@
               </div>
               <div class="appImage">
                 <img
-                  src="../img/app3.png"
+                  src="../img/app3.jpg"
                   alt="A website screenshot of Genki-G Spotify"
                 />
               </div>
@@ -334,7 +334,7 @@
               </div>
               <div class="appImage">
                 <img
-                  src="../img/app4.png"
+                  src="../img/app4.jpg"
                   alt="A website screenshot of Password Generator"
                 />
               </div>
@@ -356,19 +356,19 @@
           <div class="row gx-5">
             <div class="col-lg-4">
               <img
-                src="../img/hp1.png"
+                src="../img/hp1.jpg"
                 alt="A website screenshot of design sample 1"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/hp2.png"
+                src="../img/hp2.jpg"
                 alt="A website screenshot of design sample 2"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/hp3.png"
+                src="../img/hp3.jpg"
                 alt="A website screenshot of design sample 3"
               />
             </div>
@@ -377,19 +377,19 @@
           <div class="row gx-5">
             <div class="col-lg-4">
               <img
-                src="../img/hp4.png"
+                src="../img/hp4.jpg"
                 alt="A website screenshot of design sample 4"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/hp5.png"
+                src="../img/hp5.jpg"
                 alt="A website screenshot of design sample 5"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/hp6.png"
+                src="../img/hp6.jpg"
                 alt="A website screenshot of design sample 6"
               />
             </div>
@@ -398,19 +398,19 @@
           <div class="row gx-5">
             <div class="col-lg-4">
               <img
-                src="../img/hp7.png"
+                src="../img/hp7.jpg"
                 alt="A website screenshot of design sample 7"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/hp8.png"
+                src="../img/hp8.jpg"
                 alt="A website screenshot of design sample 8"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/hp9.png"
+                src="../img/hp9.jpg"
                 alt="A website screenshot of design sample 9"
               />
             </div>
@@ -425,19 +425,19 @@
           <div class="row gx-5">
             <div class="col-lg-4">
               <img
-                src="../img/lp1.png"
+                src="../img/lp1.jpg"
                 alt="A landing page screenshot of design sample 1"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/lp2.png"
+                src="../img/lp2.jpg"
                 alt="A landing page screenshot of design sample 2"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/lp3.png"
+                src="../img/lp3.jpg"
                 alt="A landing page screenshot of design sample 3"
               />
             </div>
@@ -446,19 +446,19 @@
           <div class="row gx-5">
             <div class="col-lg-4">
               <img
-                src="../img/lp4.png"
+                src="../img/lp4.jpg"
                 alt="A landing page screenshot of design sample 4"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/lp5.png"
+                src="../img/lp5.jpg"
                 alt="A landing page screenshot of design sample 5"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/lp6.png"
+                src="../img/lp6.jpg"
                 alt="A landing page screenshot of design sample 6"
               />
             </div>
@@ -467,19 +467,19 @@
           <div class="row gx-5">
             <div class="col-lg-4">
               <img
-                src="../img/lp7.png"
+                src="../img/lp7.jpg"
                 alt="A landing page screenshot of design sample 7"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/lp8.png"
+                src="../img/lp8.jpg"
                 alt="A landing page screenshot of design sample 8"
               />
             </div>
             <div class="col-lg-4">
               <img
-                src="../img/lp9.png"
+                src="../img/lp9.jpg"
                 alt="A landing page screenshot of design sample 9"
               />
             </div>
