Added app5 Birthday Voucher and app6 Name Picker

--- a/src/index.html
+++ b/src/index.html
@@ -345,6 +345,46 @@
                 <button type="button" class="button">Create a password</button>
               </a>
             </div>
+
+            <!-- app5 -->
+            <div class="col-lg-6">
+              <div>
+                <p>Birthday Voucher</p>
+                <p>HTML CSS JavaScript</p>
+              </div>
+              <div class="appImage">
+                <img
+                  src="../img/app5.jpg"
+                  alt="A website screenshot of Birthday Voucher"
+                />
+              </div>
+              <a
+                href="https://yukosuga.github.io/birthday-voucher/"
+                target="_blank"
+              >
+                <button type="button" class="button">Get a voucher</button>
+              </a>
+            </div>
+
+            <!-- app6 -->
+            <div class="col-lg-6">
+              <div>
+                <p>Name Picker</p>
+                <p>HTML CSS Java Script</p>
+              </div>
+              <div class="appImage">
+                <img
+                  src="../img/app6.jpg"
+                  alt="A website screenshot of Name Picker"
+                />
+              </div>
+              <a
+                href="https://yukosuga.github.io/name-picker/"
+                target="_blank"
+              >
+                <button type="button" class="button">Pick a name</button>
+              </a>
+            </div>
           </div>
         </div>
       </section>
